# learning-path-index

./: .gitignore  .pre-commit-config.yaml  LICENSE  LPI_QA_Generation.ipynb  README.md  cloudboost_scraper.ipynb  getting-started.md  label_clean_up.ipynb  pyproject.toml
.github/: CODEOWNERS
app/: Keyword Extraction with KeyBERT and WordWise.ipynb
app/course-scraper/: README.md  requirements.txt
app/llm-gemma-variant/: credentials.env  makefile  pyproject.toml
app/llm-gemma-variant/LPI_folder/: Learning_Pathway_Index.csv
app/llm-gemma-variant/src/: backend.py  gemma-few-shot-learning-with-llamaindex.ipynb  main.py  model.py  test.py  vector_db.py
app/llm-openai-like-ui/: README.md  app.py  requirements.txt
app/llm-poc-variant-01/: .gitignore  README.md  chainlit_app.py  constants.py  ingest.py  lpiGPT.py  pyproject.toml  requirements.txt
app/llm-poc-variant-02/: .env_template  Dockerfile  interface.py  learning_path_index_contextual_search.ipynb  main.py  requirements.txt
app/llm-poc-variant-03/: README.md  lpi_finetune_gemma.ipynb  lpi_gemma_finetuning.ipynb  lpi_keras_finetuning.ipynb  (+1 more)
course-scraper/: README.md  requirements.txt
data/: Courses and Learning Material.csv  Courses_and_Learning Material.csv  Courses_and_Learning_Material.csv  Learning Path Index_ chunking courses and learning material - index of topics, interests, categories - Learning Pathway Index (cleaned 20231008).csv  Learning Pathway Index.csv  Learning_Pathway_Index.csv  dataset-metadata.json
requirements/: llm-poc-variant-01.txt  llm-poc-variant-02.txt  scraper.txt
(+67 files in other folders)
